# discord-echo-bot

./: .gitignore  Makefile  pyproject.toml
.github/workflows/: main.yml
bot/: __main__.py
scripts/: create_db.py
src/bot/: __main__.py  constants.py
src/bot/cogs/: __init__.py  greetings.py
src/database/: __init__.py
src/database/schemas/: database.sql
src/echo_bot/: __main__.py
src/echo_bot/cogs/: echo.py  greetings.py
src/echo_bot/models/: quote.py  users.py
