[tool.poetry]
name = "discord-echo-bot"
version = "0.2.0"
description = ""
authors = ["Allen Burgess <allen2burgess@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.4"
discord = "^2.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"